[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "earhorn"
version = "0.21.1" # x-releaser-pleaser-version
description = "Listen, monitor and archive your streams!"
authors = [{ name = "Joola", email = "jooola@users.noreply.github.com" }]
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.9"

dependencies = [
  "click>=8.0.1,<9.0",
  "httpx>=0.28.0,<0.29",
  "lxml>=5.0.0,<6.0",
  "prometheus-client>=0.22.1,<0.23",
  "pydantic>=2.10.6,<3.0",
  "python-dotenv>=1.0.0,<2.0",
  "typing-extensions>=4.2.0",
]

[project.optional-dependencies]
dev = [
  "lxml-stubs>=0.5.0,<0.6",
  "moto>=5.0.0,<6.0",
  "mypy>=1.0,<2.0",
  "pylint>=3.0.0,<4.0",
  "pytest-cov>=6.0.0,<7.0",
  "pytest-httpx>=0.35.0,<0.36",
  "pytest-xdist>=3.0.0,<4.0",
  "pytest>=8.0.0,<9.0",
  "testcontainers>=4.0.0,<5.0",
  "types-boto3>=1.0.2,<2.0",
]
s3 = ["boto3>=1.24.8,<2.0"]
sentry = ["sentry-sdk>=2.30,<2.31"]

[project.scripts]
earhorn = "earhorn.main:cli"

[tool.setuptools]
packages = ["earhorn"]

[tool.isort]
profile = "black"
combine_as_imports = true

[tool.pylint.messages_control]
extension-pkg-whitelist = ["lxml.etree", "pydantic"]
disable = [
  "missing-module-docstring",
  "missing-function-docstring",
  "missing-class-docstring",
  "line-too-long",
  "too-many-positional-arguments",
]

[tool.pylint.format]
disable = "logging-fstring-interpolation"

[tool.mypy]
check_untyped_defs = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
